# transit_planner

./: .dockerignore  .env.example  .gitignore  API_LICENSE.md  CLAUDE.md  Dockerfile  PROGRESS.md  README.md  TODO.md  config.py  docker-compose.yml  gtfs_time.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: cache.py  lifespan.py  main.py  ratelimit.py  routes.py  schemas.py
db/: __init__.py  models.py  session.py
graph/: builder.py
ingestion/: gtfs_realtime.py  gtfs_static.py  mock_realtime.py  seed_reliability.py
llm/: explainer.py
reliability/: historical.py  live.py
routing/: engine.py
tests/: conftest.py  test_api.py  test_engine.py  test_explainer.py  test_graph_builder.py  test_gtfs_realtime.py  test_gtfs_static.py  test_reliability.py  test_seed_reliability.py
tests/integration/: test_walk_edges_postgis.py
