[project]
name = "transit-planner"
version = "0.1.0"
description = "Reliability-first routing for GO Transit buses (Toronto ↔ Guelph)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "gtfs-realtime-bindings>=1.0.0",
    "networkx>=3.2.0",
    "pandas>=2.2.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "protobuf>=4.25.0",
    "apscheduler>=3.10.4",
    "aiofiles>=23.2.0",
    "psycopg[binary]>=3.3.2",
    "geoalchemy2>=0.18.1",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
