[project]
name = "transit-planner"
version = "0.1.0"
description = "Reliability-first routing for GO Transit buses (Toronto ↔ Guelph)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "gtfs-realtime-bindings>=1.0.0",
    "networkx>=3.2.0",
    "pandas>=2.2.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "protobuf>=4.25.0",
    "apscheduler>=3.10.4",
    "aiofiles>=23.2.0",
    "psycopg[binary]>=3.3.2",
    "geoalchemy2>=0.18.1",
    "shapely>=2.1.2",
    "tzdata>=2025.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E4/E7/E9 (pycodestyle errors), F (pyflakes), I (import sorting).
# E501 (line length) intentionally not selected — docstrings and SQL
# literals run long; readability wins.
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = [
    "api", "db", "graph", "ingestion", "llm", "reliability", "routing",
    "config", "gtfs_time",
]
